src/test/ui/nll/maybe-initialized-drop-with-uninitialized-fragments.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/maybe-initialized-drop-with-uninitialized-fragments.rs:32:5
   |
27 |     let wrap = Wrap { p: &mut x };
   |                          ------ borrow of `x` occurs here
...
32 |     x = 1; //~ ERROR cannot assign to `x` because it is borrowed [E0506]
   |     ^^^^^ assignment to borrowed `x` occurs here

error: aborting due to previous error

